--- a/examples/metal3plane/hosts.yaml
+++ b/examples/metal3plane/hosts.yaml
@@ -13,10 +13,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-0
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.10:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -24,7 +26,7 @@ status:
     credentials:
       name: demo-externally-provisioned-secret
       namespace: default
-    credentialsVersion: "879"
+    credentialsVersion: "879" 
   hardware:
     cpu:
       arch: x86_64
@@ -46,12 +48,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-0
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -70,7 +73,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -78,9 +81,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f1e
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -88,10 +94,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-1
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
-    address: ipmi://192.168.122.11:6233
+    address: redfish+http://192.168.111.1:8000/redfish/v1/Systems/0a2e3d8c-e230-4511-845a-ccb12e0b71f4
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -121,12 +129,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-1
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -145,7 +154,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -153,9 +162,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f10
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda  
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -163,10 +175,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-2
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.12:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -196,12 +210,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-2
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -220,7 +235,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -228,9 +243,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f11
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -238,10 +256,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-3
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.13:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -271,12 +291,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-3
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -295,7 +316,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -303,9 +324,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f12
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -313,10 +337,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-4
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.14:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -346,12 +372,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-4
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -370,7 +397,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -378,9 +405,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f13
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -388,10 +418,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-5
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.15:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -421,12 +453,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-5
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -445,7 +478,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -453,9 +486,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f14
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -463,10 +499,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-6
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
-    address: ipmi://192.168.122.16:6233
+    address: redfish+http://192.168.111.1:8000/redfish/v1/Systems/0a2e3d8c-e230-4511-845a-ccb12e0b71f5
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -496,12 +534,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-6
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -520,7 +559,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -528,9 +567,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f15
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda 
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -538,10 +580,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-7
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.17:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -571,12 +615,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-7
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -595,7 +640,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -603,9 +648,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f16
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -613,10 +661,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-8
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.18:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -646,12 +696,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-8
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -670,7 +721,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -678,9 +729,12 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f17
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
 ---
 apiVersion: metal3.io/v1alpha1
@@ -688,10 +742,12 @@ kind: BareMetalHost
 metadata:
   name: metal3-9
 spec:
-  online: false
+  automatedCleaningMode: metadata
+  online: true
   bmc:
     address: ipmi://192.168.122.19:6233
     credentialsName: demo-externally-provisioned-secret
+  bootMode: legacy
 status:
   errorMessage: ""
   errorCount: 0
@@ -721,12 +777,13 @@ status:
       rotational: true
       serialNumber: drive-scsi0-0-0-0
       sizeBytes: 53687091200
+      type: HDD
       vendor: QEMU
     systemVendor:
       manufacturer: QEMU
       productName: Standard PC (Q35 + ICH9, 2009)
       serialNumber: ""
-    hostname: master-0
+    hostname: metal3-9
     nics:
     - ip: 172.22.0.11
       mac: 00:28:19:1f:79:4d
@@ -745,7 +802,7 @@ status:
   hardwareProfile: unknown
   operationalStatus: OK
   operationHistory: {}
-  poweredOn: false
+  poweredOn: true
   triedCredentials:
     credentials:
       name: demo-externally-provisioned-secret
@@ -753,7 +810,10 @@ status:
     credentialsVersion: "879"
   provisioning:
     ID: be02cfb3-7b24-47c7-b9b8-d69207d86f18
+    bootMode: legacy
     image:
       checksum: http://172.22.0.1/images/centos-updated.qcow2.md5sum
       url: http://172.22.0.1/images/centos-updated.qcow2
+    rootDeviceHints:
+      deviceName: /dev/sda
     state: ready
