--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -78,8 +78,8 @@ providers:
 variables:
   KUBERNETES_VERSION: "${KUBERNETES_VERSION}"
   UPGRADED_K8S_VERSION: "${UPGRADED_K8S_VERSION}"
-  CNI: "./data/cni/calico/calico.yaml"
-  APIVersion: "infrastructure.cluster.x-k8s.io/v1alpha5"
+  CNI: "/tmp/calico.yaml"
+  APIVersion: "infrastructure.cluster.x-k8s.io/${CAPM3_VERSION}"
   NAMEPREFIX: "${NAMEPREFIX:-baremetal-operator}"
   IRONIC_NAMESPACE: "${IRONIC_NAMESPACE:-baremetal-operator-system}"
   CONTAINER_REGISTRY: "${CONTAINER_REGISTRY:-quay.io}"
