This commit: - adds Capm3FastTrack variable, sets default to false - adds a feature where changes bmh.Spec.Online field to on/off during deprovisioning based on values of AutomatedCleaningMode and Capm3FastTrack
Signed-off-by: Sunnatillo <sunnat.samadov@est.tech>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,10 @@ kind: Kustomization
 resources:
   - manager.yaml
 
+configMapGenerator:
+- name: capm3fasttrack-configmap
+  literals:
+  - CAPM3_FAST_TRACK=${CAPM3_FAST_TRACK:='false'}
+
 generatorOptions:
  disableNameSuffixHash: true
